--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -4,6 +4,8 @@ metadata:
   name: backstage-adr-test
   annotations:
     github.com/project-slug: NicklasFranzen/backstage-adr-test
+    backstage.io/techdocs-ref: dir:.
+    backstage.io/adr-location: docs/adrs
 spec:
   type: other
   lifecycle: unknown
